--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   riverpod_generator: ^1.2.0
   build_runner: ^2.3.3
+  mocktail: ^0.3.0
 
 flutter:
   uses-material-design: true
